add style to responsive menu

--- a/Responsive menu.html
+++ b/Responsive menu.html
@@ -20,10 +20,14 @@
             </div>
         </section>
         <ul class="Menu">
-            <div class="logo"><img src="img/logo.png" alt="logo"></div>
+            <div class="logo">
+                <img src="img/logo.png" alt="logo">
+            </div>
             <li><a href="#">خانه <i class="fas fa-home"></i></a></li>
             <li>
-                <a href="#" data-toggle-id="subMenu1">نرم افزار <i class="fab fa-windows"></i></a>
+                <a href="#" data-toggle-id="subMenu1">نرم افزار <i class="fab fa-windows"></i>
+                    <span class="arrow-down"></span>
+                </a>
                 <ul id="subMenu1">
                     <li><a href="#">کدنویسی<i class="far fa-code"></i></a></li>
                     <li><a href="#"> طراحی<i class="far fa-palette"></i></a></li>
