final style menu

--- a/Responsive menu.html
+++ b/Responsive menu.html
@@ -20,15 +20,12 @@
             </div>
         </section>
         <ul class="Menu">
-            <div class="logo">
-                <img src="img/logo.png" alt="logo">
-            </div>
             <li><a href="#">خانه <i class="fas fa-home"></i></a></li>
             <li>
                 <a href="#" data-toggle-id="subMenu1">نرم افزار <i class="fab fa-windows"></i>
                     <span class="arrow-down"></span>
                 </a>
-                <ul id="subMenu1">
+                <ul id="subMenu1" hidden>
                     <li><a href="#">کدنویسی<i class="far fa-code"></i></a></li>
                     <li><a href="#"> طراحی<i class="far fa-palette"></i></a></li>
                     <li><a href="#">بازی سازی<i class="fas fa-gamepad"></i></a></li>
