--- a/Responsive menu.html
+++ b/Responsive menu.html
@@ -22,10 +22,10 @@
         <ul class="Menu">
             <li><a href="#">خانه <i class="fas fa-home"></i></a></li>
             <li>
-                <a href="#" data-toggle-id="subMenu1">نرم افزار <i class="fab fa-windows"></i>
+                <a href="#" data-toggle-id="subMenu">نرم افزار <i class="fab fa-windows"></i>
                     <span class="arrow-down"></span>
                 </a>
-                <ul id="subMenu1" hidden>
+                <ul id="subMenu" hidden>
                     <li><a href="#">کدنویسی<i class="far fa-code"></i></a></li>
                     <li><a href="#"> طراحی<i class="far fa-palette"></i></a></li>
                     <li><a href="#">بازی سازی<i class="fas fa-gamepad"></i></a></li>
