--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
         if (e.target.tagName != 'A') return;
         let child = e.target.parentNode.querySelector('ul');
         if (!child) return; // no child
-        clild.hidden = !clild.hidden;
+        child.hidden = !child.hidden;
     });
 </script>
 
